Bug 125411 [NuBus] Mac installer crashes with a type 12 error (SleepQInstall) r=sfraser sr=beard thanks to tim@maroney.org (see bug 138156)